--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 #root {
-  max-width: 1280px;
+  max-width: 1920px;
   margin: 0 auto;
   padding: 2rem;
+  margin-top: 20px;
   text-align: center;
 }
